@@ -177,6 +177,7 @@ Jython in ways large and small, in no particular order:
     Doug Clayton
     Carl Wicklow
     James Mudd
+    Mat Booth
 
 Local Variables:
 mode: indented-text
